--- a/simulator/src/main/resources/application.properties
+++ b/simulator/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=9000
 #EUREKA
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 eureka.client.register-with-eureka=false
+#OKHTTPCLIENT
+spring.cloud.openfeign.okhttp.enabled=true
