--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,14 @@
                 <version>13.5</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+            <!-- http://localhost:8080/swagger-ui/index.html#/ -->
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>2.8.5</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
