--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -3,6 +3,6 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     scrape_interval: 3s
     static_configs:
-      - targets: ['host.docker.internal:53433']
+      - targets: ['host.docker.internal:64453', 'host.docker.internal:64443']
         labels:
           application: 'Invoices Application'
