--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -1,8 +1,8 @@
 scrape_configs:
-  - job_name: 'InvoicesMetrics'
-    metrics_path: '/actuator/prometheus'
-    scrape_interval: 3s
-    static_configs:
-      - targets: ['host.docker.internal:64453', 'host.docker.internal:64443']
-        labels:
-          application: 'Invoices Application'
+
+  # Discover Eureka services to scrape.
+  - job_name: 'eureka'
+
+    # Scrape Eureka itself to discover new services.
+    eureka_sd_configs:
+      - server: http://desktop-jua7r1e:8761/eureka
