--- a/orders-app/src/main/resources/application.properties
+++ b/orders-app/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#logging
+logging.level.root=warn
 #actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
