--- a/flows-app/pom.xml
+++ b/flows-app/pom.xml
@@ -51,6 +51,10 @@
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-jackson-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-opentelemetry-starter</artifactId>
+        </dependency>
 
         <!-- JMS -->
         <dependency>
