--- a/simulator/pom.xml
+++ b/simulator/pom.xml
@@ -30,6 +30,10 @@
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-jackson-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-opentelemetry-starter</artifactId>
+        </dependency>
 
         <!-- CLOUD -->
         <dependency>
