--- a/simulator/pom.xml
+++ b/simulator/pom.xml
@@ -44,6 +44,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-micrometer</artifactId>
+        </dependency>
 
         <!-- FEIGN REST client -->
         <dependency>
