--- a/flows-app/src/main/resources/application.properties
+++ b/flows-app/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-#logging
-logging.level.root=info
 #actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
@@ -13,3 +11,5 @@ server.port=0
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 #OKHTTPCLIENT
 spring.cloud.openfeign.okhttp.enabled=true
+#logging
+logging.level.root=warn
