--- a/simulator/src/main/resources/application.properties
+++ b/simulator/src/main/resources/application.properties
@@ -4,3 +4,5 @@ eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 eureka.client.register-with-eureka=false
 #OKHTTPCLIENT
 spring.cloud.openfeign.okhttp.enabled=true
+#logging
+logging.level.root=warn
