--- a/flows-app/src/main/resources/application.properties
+++ b/flows-app/src/main/resources/application.properties
@@ -12,4 +12,4 @@ eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 #OKHTTPCLIENT
 spring.cloud.openfeign.okhttp.enabled=true
 #logging
-logging.level.root=warn
+logging.level.root=info
