--- a/flows-app/src/main/resources/application.properties
+++ b/flows-app/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#logging
+logging.level.root=warn
 #actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
@@ -11,5 +13,3 @@ server.port=0
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 #OKHTTPCLIENT
 spring.cloud.openfeign.okhttp.enabled=true
-#logging
-logging.level.root=info
