--- a/invoices-app/src/main/resources/application.properties
+++ b/invoices-app/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #logging
 logging.level.root=warn
+spring.main.banner-mode=off
 #actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
