--- a/flows-app/src/main/resources/application.properties
+++ b/flows-app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #logging
-logging.level.root=warn
+logging.level.root=info
 spring.main.banner-mode=off
 #actuator
 management.endpoints.web.exposure.include=*
