--- a/simulator/src/main/resources/application.properties
+++ b/simulator/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9000
 #logging
-logging.level.root=warn
+logging.level.root=info
 spring.main.banner-mode=off
 #EUREKA
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
