--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,56 +2,33 @@ services:
 
   #http://localhost:8081/ui/clusters/local/topics
   kafka-ui:
-    image: provectuslabs/kafka-ui
+    image: provectuslabs/kafka-ui:latest
     container_name: kafka-ui
     environment:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "kafka:29092,localhost:29092,localhost:9092,kafka:9092"
-      KAFKA_CLUSTERS_0_ZOOKEEPER: localhost:2181
       KAFKA_CLUSTERS_0_READONLY: true
     ports:
       - "8081:8080"
     depends_on:
-      - kafka1
-      - kafka2
-      - kafka3
+      - broker
 
-  kafka1:
-    image: confluentinc/cp-kafka:latest
-    container_name: kafka1
+  broker:
+    image: apache/kafka:latest
+    container_name: broker
     environment:
-      CLUSTER_ID: 1
       KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_LISTENERS: PLAINTEXT://localhost:9092,CONTROLLER://localhost:9093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      KAFKA_LISTENERS: PLAINTEXT://kafka1:9092,CONTROLLER://kafka1:9093
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka1:9092
-      KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
-      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka1:9093,2@kafka2:9093,3@kafka3:9093'
-      KAFKA_PROCESS_ROLES: 'broker,controller'
-  kafka2:
-      image: confluentinc/cp-kafka:latest
-      container_name: kafka2
-      environment:
-        CLUSTER_ID: 1
-        KAFKA_NODE_ID: 2
-        KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-        KAFKA_LISTENERS: PLAINTEXT://kafka2:9092,CONTROLLER://kafka2:9093
-        KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka2:9092
-        KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
-        KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka1:9093,2@kafka2:9093,3@kafka3:9093'
-        KAFKA_PROCESS_ROLES: 'broker,controller'
-  kafka3:
-      image: confluentinc/cp-kafka:latest
-      container_name: kafka3
-      environment:
-        CLUSTER_ID: 1
-        KAFKA_NODE_ID: 3
-        KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-        KAFKA_LISTENERS: PLAINTEXT://kafka3:9092,CONTROLLER://kafka3:9093
-        KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:9092
-        KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
-        KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka1:9093,2@kafka2:9093,3@kafka3:9093'
-        KAFKA_PROCESS_ROLES: 'broker,controller'
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_NUM_PARTITIONS: 3
 
   postgres:
     image: postgres:latest
