--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,7 @@ services:
     image: provectuslabs/kafka-ui:latest
     container_name: kafka-ui
     environment:
-      KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "kafka:29092,localhost:29092,localhost:9092,kafka:9092"
-      KAFKA_CLUSTERS_0_READONLY: true
+      DYNAMIC_CONFIG_ENABLED: 'true'
     ports:
       - "8081:8080"
     depends_on:
